--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "brain-games": "bin/brain-games.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint ."
   },
+  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Kva-anna/frontend-project-44.git"
@@ -19,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/Kva-anna/frontend-project-44/issues"
   },
-  "homepage": "https://github.com/Kva-anna/frontend-project-44#readme"
+  "homepage": "https://github.com/Kva-anna/frontend-project-44#readme",
+  "devDependencies": {
+    "eslint": "^9.29.0"
+  }
 }
